--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,23 @@
 .idea/vcs.xml
 .idea/workspace.xml
 .idea/codeStyles/Project.xml
+.DS_Store
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
